option optimize_for = SPEED;

message MetricSetup {
    required int32 id = 1;
    required int32 metricId = 2;
    required string entityTypes = 3;
}

    enum Modification {
        NONE = 0;
        ADDED = 1;
        UPDATED = 2;
        DELETED = 3;
    }


message MetricSetupChangedEvent {

    required MetricSetup metricSetup = 1;
    required Modification modification = 2 [default = NONE];
    required int32 accountId = 3;
}

message CalculateMetricCommand {
    required int32 accountId = 1;
    required MetricSetup metricSetup = 2;
    repeated int32 targetIds = 3 [packed = true];
    required string eventId = 4;
    required string commandId = 5;
}

message Target {
	required int32 id = 1;
	required string entityType = 2;
}

message CalculateMetricCommandExtended {
    required int32 accountId = 1;
    required MetricSetup metricSetup = 2;
    repeated Target targets = 3;
    required string eventId = 4;
    required string commandId = 5;
}
